--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "buefy": "^0.6.5",
     "bufferutil": "^3.0.3",
     "express": "^4.15.2",
+    "firebase": "^4.12.1",
     "particles.js": "^2.0.0",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
